[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
pollster = "0.3.0"
bytemuck = { version = "1.20.0", features = ["derive"] }
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
wgpu = "22"
winit = "0.30.5"
anyhow = "1.0.94"
glam = { version = "0.29.2", features = ["bytemuck"] }
